# autobackup

./: CMakeLists.txt
src/: BackupService.cpp  BackupService.h  DriveInfo.cpp  DriveInfo.h  Platform.h  StartupOptions.h  Timer.h  Utils.h  WinService.cpp  WinService.h  main.cpp
src/zip/: FileZip.cpp  FileZip.h
